--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,9 @@ body {
   background: #f5f5f5;
   width: 100vw;
   height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 .container {
   max-width: 1024px;
